Fix overlapping the button with the textarea

--- a/assets/form.css
+++ b/assets/form.css
@@ -30,6 +30,8 @@
 
 .form__message {
   flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .form__block--divider-small {
@@ -56,7 +58,7 @@
 
 .form__textarea {
   min-height: 180px;
-  height: calc(100% - var(--form-elements-gap-md));
+  flex: 1 1 auto;
   line-height: var(--font-height-lg);
   resize: none;
 }
